hphp/test/slow/type_annotation/type_annotation_typeaccess5.php.expectf
Fatal error: when resolving type constant C::U, class NonExistentClass not found in %s on line 9
